# david-revenue-engine

./: .env.local.example  .gitignore  AGENTS.md  README.md  next.config.ts  package-lock.json  package.json  start.sh  test_e2e.py
.claude/: launch.json
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  database.py  main.py  models.py  requirements.txt  schemas.py
components/: account-table.tsx  app-header.tsx  briefs-workspace.tsx  business-profile-workspace.tsx  campaign-input.tsx  campaign-intelligence-panel.tsx  campaign-report.tsx  chips.tsx  conversion-outreach-panel.tsx  demo-console.tsx  email-connection-panel.tsx  fast-conversion-router.tsx  fitting-score-badge.tsx  fitting-strategy-panel.tsx  inbox-workspace.tsx  land-and-expand-plan.tsx  leaks-levers-card.tsx  overview-hero.tsx  provenance-label.tsx  revenue-opportunity-badge.tsx  revenue-opportunity-drawer.tsx  revenue-pipeline-board.tsx  score-card.tsx  sending-panel.tsx  ui.tsx  validation-badge.tsx  workspace.tsx
data/: seed-accounts.json  seed-replies.json
docs/: codebase-briefing.md  phase-2-handoff.md
lib/: brief.ts  campaign.ts  constants.ts  format.ts  icp-api.ts  icp-bridge.ts  icp-session.ts  llm.ts  outreach.ts  prompts.ts  reply-conversation.ts  reply-router.ts  reply-validators.ts  roi.ts  routing.ts  scoring.ts  seed.ts  sending.ts  store.ts  strategy.ts  test-recipients.ts  theme.ts  types.ts  validators.ts
linkedin-outreach/: pyproject.toml
linkedin-outreach/src/linkedin_outreach/: cli.py
scripts/: email-roundtrip.ts  smoke.ts  verify-campaign-flow.ts  (+1 more)
(+71 files in other folders)
